--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-ExifRead        2.3.2
-pip             20.2.4
-python-dateutil 2.8.1
-setuptools      28.8.0
-Shapely         1.7.1
-six             1.15.0
+ExifRead==2.3.2
+python-dateutil==2.8.1
+Shapely==1.7.1
+six==1.15.0
